Fixed misc:same-filter function; Added support for an Embed element which can be used to implement XTiger components importation from another file in a Supergrid extension (the match rule must be defined in the extension XSLT file, we used it to import questions from a feedback questionnaire in a project using the poll.xsl extension), similarly to the Include element but w/o instantiating the components; Added TriggerBy attribute on Transition element in workflow definition to declare "invisible" transitions which are not end-user triggered (hence not generated in status change many) but which may be triggered for instance from 3rd part applications through web service invocation; Added a css rule for styling commentated questions generated with the feedback application poll.xsl Supergrid extension (note: maybe this will move to an application specific css file in the future when we'll do css reengineering); Fixed archived Email alert rendering in workflow.

--- a/resources/css/forms.css
+++ b/resources/css/forms.css
@@ -132,6 +132,10 @@ div.select2-drop-auto-width { /* overwrite select2 */
                 'html' plugin
  **************************************************/
 
+.af-html.af-question-comment {
+  margin-left: 0;
+}
+
 .af-html-edit, .af-html {
   border-radius: 4px;
   background-color: #FCFCFC;
